tests/ui/abort.stderr
warning: panic message is not a string literal
   --> src/lib.rs
    |
    |     panic!(AbortNow)
    |     ------ ^^^^^^^^
    |     |
    |     help: use std::panic::panic_any instead: `std::panic::panic_any`
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>

error: abort!(span, from) test
 --> tests/ui/abort.rs:4:13
  |
4 | abort_from!(one, two);
  |             ^^^

error: abort!(span, single_expr) test
 --> tests/ui/abort.rs:5:18
  |
5 | abort_to_string!(one, two);
  |                  ^^^

error: abort!(span, expr1, expr2) test
 --> tests/ui/abort.rs:6:15
  |
6 | abort_format!(one, two);
  |               ^^^

error: Diagnostic::abort() test
 --> tests/ui/abort.rs:7:15
  |
7 | direct_abort!(one, two);
  |               ^^^

error: This is an error

         = note: simple note
         = help: simple help
         = help: simple hint
         = note: simple yay
         = note: format note
         = note: Some note
         = note: spanned simple note
         = note: spanned format note
         = note: Some note

 --> tests/ui/abort.rs:8:14
  |
8 | abort_notes!(one, two);
  |              ^^^

error: abort_call_site! test
 --> tests/ui/abort.rs:9:1
  |
9 | abort_call_site_test!(one, two);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `abort_call_site_test` (in Nightly builds, run with -Z macro-backtrace for more info)
